--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Serverless Cloud JavaScript API template",
   "main": "index.js",
   "type": "module",
-  "scripts": {
-    
-  },
+  "scripts": {},
   "devDependencies": {
     "eslint": "^8.33.0"
   },
@@ -18,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jimp": "^0.16.2",
-    "mongodb": "^5.0.0"
+    "mongodb": "^5.0.0",
+    "sharp": "^0.31.3"
   }
 }
