--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "jimp": "^0.16.2",
     "mongodb": "^5.0.0",
+    "pusher": "^5.1.2",
     "sharp": "^0.31.3"
   }
 }
