--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   },
   "dependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
+    "@shopify/shopify-api": "^6.2.0",
     "aws-sdk": "^2.1320.0",
     "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
