--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^8.33.0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.310.0",
     "@rushstack/eslint-patch": "^1.2.0",
     "@shopify/shopify-api": "^6.2.0",
     "aws-sdk": "^2.1320.0",
@@ -24,8 +25,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jimp": "^0.16.2",
+    "luxon": "^3.3.0",
     "mongodb": "^5.0.0",
     "pusher": "^5.1.2",
-    "sharp": "^0.31.3"
+    "sharp": "^0.31.3",
+    "undici": "^5.21.2"
   }
 }
